change input type=date for session date.

--- a/templates/instructor_course_dashboard.html
+++ b/templates/instructor_course_dashboard.html
@@ -50,7 +50,7 @@ $(document).ready(function(){
         {% endfor %}
         <tr>
             <td>
-                <input id="newSession" placeholder="YYYY-MM-DD"/>
+                <input id="newSession" type="date"/>
             </td>
             <td>
                 <button id="addSessionBtn" class="btn btn-primary">New Session</button>
