--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,10 +4,14 @@
 {% block content %}
 
 <main role="main" class="inner cover">
-    <!--TODO: make it a form, so that user can update name/email-->
-    <h3 class="cover-heading"> Name: {{user.name}} </h3>
-    <h3 class="cover-heading"> Email: {{user.email}} </h3>
+    <form id="UserProfileForm" action="/dashboard/student/profile" method="post">
+        {{ update_profile_form.hidden_tag() }}
+        {{ macros.render_field(update_profile_form.name, value= user.name, label_visible=true) }}
+        {{ macros.render_field(update_profile_form.email, value= user.email, label_visible=true) }}
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 </main>
+
 
 
 
