Display user name in chatroom.

--- a/templates/index1.html
+++ b/templates/index1.html
@@ -7,7 +7,7 @@
     <body>
         <div class="row flex-nowrap app-area">
             <div class="col-channel-width color-channel-test">
-                <h4 id="user"></h4>
+                <h4 id="user">{{user}}</h4>
                 <h1 id="channel-heading">Channels</h1>
                 <form id="add-channel-form" action="/chatroom" method="post">
                     <div class="input-group mb-3 channel-input">
