Support multi-course chatroom. Minor UI bugs exist.

--- a/templates/index1.html
+++ b/templates/index1.html
@@ -7,9 +7,10 @@
     <body>
         <div class="row flex-nowrap app-area">
             <div class="col-channel-width color-channel-test">
+                <div id="crn" hidden="true">{{crn}}</div>
                 <h4 id="user">{{user}}</h4>
                 <h1 id="channel-heading">Channels</h1>
-                <form id="add-channel-form" action="/chatroom" method="post">
+                <form id="add-channel-form">
                     <div class="input-group mb-3 channel-input">
                         <input id="channel" type="text" class="form-control" placeholder="New channel name" aria-describedby="basic-addon2">
                         <div class="input-group-append">
@@ -19,7 +20,7 @@
                 </form>
                 <ul id="channels">
                     {% for channel in channel_list %}
-                        <form id="switch-channel-form" action="/chatroom" method="post">
+                        <form id="switch-channel-form">
                             <button id="submit-switch-channel" type="submit" value={{channel}}><li id="channel-option"># {{channel}}</li></button>
                         </form>
                     {% endfor %}
@@ -30,7 +31,7 @@
                     <ul id="comment-list" class="list-unstyled">
                     </ul>
                 </div>
-                <form id="message-form" action="/chatroom"  method="post">
+                <form id="message-form">
                     <div class="input-group mb-3 message-input">
                         <input id="message-input" type="text" class="form-control" placeholder="Enter message here" aria-describedby="basic-addon2">
                         <div class="input-group-append">
