--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,7 @@
                 </div>
             </li>
         </script>
-        <script type="text/javascript" src="{{ url_for('static', filename='index1.js') }}"></script>
+        <script type="text/javascript" id="chatroomScript" data-crn="12345" src="{{ url_for('static', filename='index1.js') }}"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/styles.css', version='306') }}">
     </head>
