--- a/templates/student_registered_courses.html
+++ b/templates/student_registered_courses.html
@@ -40,7 +40,7 @@ td, th {
             <th scope="col">Year</th>
             <th scope="col">Term</th>
             <th scope="col">Instructor</th>
-  
+            <th scope="col">Chatroom</th>
           </tr>
         </thead>
         <tbody>
@@ -51,6 +51,7 @@ td, th {
                 <td>{{ c.year }}</td>
                 <td>{{ c.term }}</td>
                 <td>{{ c.instructor }}</td>
+                <td><button onclick="window.open('/chatroom/{{c.CRN}}','_blank')">Enter chatroom</button></td>
               </tr>
             {% endfor %}
         </tbody>
