--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,93 +1,121 @@
 .app-area {
-  height: 100%; }
+  height: 100%;
+}
 
 .color-message-test {
-  background-color: white; }
+  background-color: white;
+}
 
 .color-channel-test {
-  background-color: #171C2F; }
+  background-color: #171C2F;
+}
 
 .comment-media:hover {
-  background-color: #F9F9F9; }
+  background-color: #F9F9F9;
+}
 
 #channel-title {
   margin-left: 30px;
-  font-family: "Josefin Sans", sans-serif; }
+  font-family: 'Inconsolata', monospace;
+}
 
 #message-view {
-  margin-top: 10px; }
+  margin-top: 10px;
+}
 
 .col-channel-width {
   width: 300px;
-  padding-left: 30px; }
+  padding-left: 30px;
+}
 
 .channel-input {
-  width: 90%; }
-  .channel-input .add-button {
-    color: #8C93B3;
-    background-color: #171C2F; }
+  width: 90%;
+}
+
+.channel-input .add-button {
+  color: #8C93B3;
+  background-color: #171C2F;
+}
 
 .message-input {
   width: 95%;
   margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 15px; }
-  .message-input .add-button {
-    color: #8C93B3;
-    background-color: #171C2F; }
+  margin-bottom: 15px;
+}
+
+.message-input .add-button {
+  color: #8C93B3;
+  background-color: #171C2F;
+}
 
 .btn:disabled {
   color: #8C93B3;
   background-color: #171C2F;
-  opacity: 1.0; }
+  opacity: 1.0;
+}
 
-html, body {
+html,
+body {
   height: 100%;
   overflow-y: hidden;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+}
 
 #user {
   color: #8C93B3;
   margin-top: 20px;
   margin-left: 3px;
-  font-family: "Josefin Sans", sans-serif;
-  font-size: 250%; }
+  font-family: 'Inconsolata', monospace;
+  font-size: 250%;
+}
 
 #channel-heading {
   color: #8C93B3;
-  font-family: "Josefin Sans", sans-serif;
-  font-size: 200%; }
+  font-family: 'Inconsolata', monospace;
+  font-size: 200%;
+}
 
 #channel-option {
-  font-family: "Josefin Sans", sans-serif;
-  font-size: 150%; }
+  font-family: 'Inconsolata', monospace;
+  font-size: 150%;
+}
 
 .add-button:hover {
   color: #171C2F;
-  background-color: #8C93B3; }
+  background-color: #8C93B3;
+}
 
 ul {
   list-style-type: none;
   text-align: left;
   margin-left: 0;
-  padding-left: 0; }
-  ul li {
-    color: #8C93B3;
-    font-size: 120%; }
+  padding-left: 0;
+}
+
+ul li {
+  color: #8C93B3;
+  font-size: 120%;
+}
 
 #plus {
-  font-family: "Josefin Sans", sans-serif;
-  font-size: 150%; }
+  font-family: 'Inconsolata', monospace;
+  font-size: 150%;
+}
 
 #send {
-  font-family: "Josefin Sans", sans-serif;
-  font-size: 120%; }
+  font-family: 'Inconsolata', monospace;
+  font-size: 120%;
+}
 
 #switch-channel-form:hover {
-  background-color: #8C93B3 !important; }
-  #switch-channel-form:hover #channel-option {
-    color: #171C2F !important; }
+  background-color: #8C93B3 !important;
+}
+
+#switch-channel-form:hover #channel-option {
+  color: #171C2F !important;
+}
 
 #submit-switch-channel {
   background: none;
@@ -95,13 +123,18 @@ ul {
   border: none;
   padding: 0;
   font: inherit;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
-h5, #time {
-  display: inline; }
+h5,
+#time {
+  display: inline;
+}
 
-#submit-switch-channel:active, #submit-switch-channel:focus {
-  outline: none; }
+#submit-switch-channel:active,
+#submit-switch-channel:focus {
+  outline: none;
+}
 
 .comment-container {
   margin-top: 15px;
@@ -111,20 +144,29 @@ h5, #time {
   background-color: white;
   width: 105%;
   height: 80%;
-  padding: 10px 10px 10px 33px; }
-  .comment-container .comment-item {
-    margin-right: 25px;
-    text-align: left;
-    word-wrap: break-word; }
-    .comment-container .comment-item .comment-user {
-      font-size: 131%;
-      color: black;
-      font-family: "Josefin Sans", sans-serif; }
-    .comment-container .comment-item .comment-comment {
-      font-size: 79%;
-      color: black;
-      font-family: "Josefin Sans", sans-serif; }
-    .comment-container .comment-item .comment-time {
-      font-size: 79%;
-      color: black;
-      font-family: "Josefin Sans", sans-serif; }
+  padding: 10px 10px 10px 33px;
+}
+
+.comment-container .comment-item {
+  margin-right: 25px;
+  text-align: left;
+  word-wrap: break-word;
+}
+
+.comment-container .comment-item .comment-user {
+  font-size: 131%;
+  color: black;
+  font-family: 'Inconsolata', monospace;
+}
+
+.comment-container .comment-item .comment-comment {
+  font-size: 79%;
+  color: black;
+  font-family: 'Inconsolata', monospace;
+}
+
+.comment-container .comment-item .comment-time {
+  font-size: 79%;
+  color: black;
+  font-family: 'Inconsolata', monospace;
+}
