--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>H-Chat</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link href="https://fonts.googleapis.com/css?family=Carter+One|PT+Sans+Caption|Josefin+Sans" rel="stylesheet">
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
-        <script id="load-channel-title" type="text/template">
-            <h1 id="channel-title">{% raw -%}{{channel_to_display}}{%- endraw %}</h1>
+
+<head>
+    <title>Course Chatroom</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+        integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/styles.css', version='306') }}">
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
+    <script id="load-channel-title" type="text/template">
+        <h1 id="channel-title">{% raw -%}{{channel_to_display}}{%- endraw %}</h1>
         </script>
-        <script id="load-messages" type="text/template">
-            <li class="media comment-item">
+    <script id="load-messages" type="text/template">
+        <li class="media comment-item">
                 <div class="media-body comment-media">
                     <h5 class="mt-0 mb-1 comment-user">{% raw -%}{{comment.user}} &middot{%- endraw %}</h5>
                     <div id="time" class="comment-time">{% raw -%}{{comment.timestamp}}{%- endraw %}</div>
@@ -19,15 +23,15 @@
                 </div>
             </li>
         </script>
-        <script type="text/javascript" id="chatroomScript" data-crn="12345" src="{{ url_for('static', filename='index1.js') }}"></script>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/styles.css', version='306') }}">
-    </head>
+    <script type="text/javascript" id="chatroomScript" data-crn="12345"
+        src="{{ url_for('static', filename='index1.js') }}"></script>
 
-    {% block heading %}{% endblock %}
+</head>
 
-    {% block body %}
+{% block heading %}{% endblock %}
 
-    {% endblock %}
+{% block body %}
+
+{% endblock %}
 
 </html>
