--- a/templates/instructor_dashboard.html
+++ b/templates/instructor_dashboard.html
@@ -51,7 +51,7 @@ $(document).ready(function(){
         <div aria-live="polite" aria-atomic="true">
             <div class="toast" style="position: absolute; top: 80; width: 200rem;" data-delay="3000">
               <div class="toast-header">
-                  <svg class="bd-placeholder-img rounded mr-2" width="20" height="20" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect fill="#333" width="100%" height="100%"></rect></svg>
+                  <svg class="bd-placeholder-img rounded mr-2" width="20" height="20" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect fill="#018abf" width="100%" height="100%"></rect></svg>
                 <strong class="mr-auto">Peer Learning</strong>
                 <small class="text-muted">Greeting Message</small>
                 <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
