--- a/templates/student_registered_courses.html
+++ b/templates/student_registered_courses.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% import 'macros.html' as macros %}
-{% set nav_tabs = [("Home", "/dashboard/student/courses"), ("Profile", "/dashboard/student/profile"), ("Log out", "/logout")] %}
+{% set nav_tabs = [("Home", "/dashboard/student/courses"), ("Profile", "/dashboard/student/profile"), ("Sign Out", "/logout")] %}
 {% set active_tab = "Home" %}
 {% block content %}
 
@@ -43,7 +43,7 @@ td, th {
         <div aria-live="polite" aria-atomic="true">
             <div class="toast" style="position: absolute; top: 80; width: 200rem;" data-delay="3000">
               <div class="toast-header">
-                  <svg class="bd-placeholder-img rounded mr-2" width="20" height="20" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect fill="#333" width="100%" height="100%"></rect></svg>
+                  <svg class="bd-placeholder-img rounded mr-2" width="20" height="20" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect fill="#018abf" width="100%" height="100%"></rect></svg>
                 <strong class="mr-auto">Peer Learning</strong>
                 <small class="text-muted">Greeting Message</small>
                 <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
@@ -81,7 +81,7 @@ td, th {
                 <td>{{ c.year }}</td>
                 <td>{{ c.term }}</td>
                 <td>{{ c.instructor }}</td>
-                <td><button onclick="window.open('/chatroom/{{c.CRN}}','_blank')">Enter chatroom</button></td>
+                <td><button class="btn btn-warning" onclick="window.open('/chatroom/{{c.CRN}}','_blank')">Enter chatroom</button></td>
               </tr>
             {% endfor %}
         </tbody>
@@ -89,7 +89,7 @@ td, th {
       
       
       <br>
-      <button class="btn btn-primary" onclick="location.href = '/dashboard/student/add-course';">Add another course</button>
+      <button class="btn btn-info" onclick="location.href = '/dashboard/student/add-course';">Add Course</button>
   
       </div>
 
