--- a/templates/student_registered_courses.html
+++ b/templates/student_registered_courses.html
@@ -6,94 +6,97 @@
 
 <!-- CSS -->
 <style>
+  table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
 
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
+  td,
+  th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-/* toast */
-.toast {
-  color: #333;
-  text-shadow: none;
-  text-align: left;
-}
-
+  /* toast */
+  .toast {
+    color: #333;
+    text-shadow: none;
+    text-align: left;
+  }
 </style>
 
 <!-- script -->
 <script>
-    $(document).ready(function(){
-        $('.toast').toast('show');
-    });
-    </script>
+  $(document).ready(function () {
+    $('.toast').toast('show');
+  });
+</script>
 
 
 <main role="main">
-    
-    <div class="container-fluid">
 
-        <div aria-live="polite" aria-atomic="true">
-            <div class="toast" style="position: absolute; top: 80; width: 200rem;" data-delay="3000">
-              <div class="toast-header">
-                  <svg class="bd-placeholder-img rounded mr-2" width="20" height="20" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect fill="#018abf" width="100%" height="100%"></rect></svg>
-                <strong class="mr-auto">Peer Learning</strong>
-                <small class="text-muted">Greeting Message</small>
-                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="toast-body">
-                  Welcome back, {{current_user.name}}!
-              </div>
-            </div>
-          </div>
-      
-      <h1 class="cover-heading">Student Panel</h1>
-      <br>
-      <br>
+  <div class="container-fluid">
 
-      <h3>Your current course(s):</h3>
-      <br>
-      <table class="table table-hover table-dark">
-        <thead>
-          <tr>
-            <th scope="col">CRN</th>
-            <th scope="col">Title</th>
-            <th scope="col">Year</th>
-            <th scope="col">Term</th>
-            <th scope="col">Instructor</th>
-            <th scope="col">Chatroom</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for c in courses %}
-              <tr>
-                <td>{{ c.CRN }}</td>
-                  <td><a href="/dashboard/student/course/{{c.CRN}}">{{ c.title }}</a></td>
-                <td>{{ c.year }}</td>
-                <td>{{ c.term }}</td>
-                <td>{{ c.instructor }}</td>
-                <td><button class="btn btn-warning" onclick="window.open('/chatroom/{{c.CRN}}','_blank')">Enter chatroom</button></td>
-              </tr>
-            {% endfor %}
-        </tbody>
-      </table>
-      
-      
-      <br>
-      <button class="btn btn-info" onclick="location.href = '/dashboard/student/add-course';">Add Course</button>
-  
+    <div aria-live="polite" aria-atomic="true">
+      <div class="toast" style="position: absolute; top: 80; width: 200rem;" data-delay="3000">
+        <div class="toast-header">
+          <svg class="bd-placeholder-img rounded mr-2" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
+            preserveAspectRatio="xMidYMid slice" focusable="false" role="img">
+            <rect fill="#018abf" width="100%" height="100%"></rect>
+          </svg>
+          <strong class="mr-auto">Peer Learning</strong>
+          <small class="text-muted">Greeting Message</small>
+          <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="toast-body">
+          Welcome back, {{current_user.name}}!
+        </div>
       </div>
+    </div>
+
+    <h1 class="cover-heading">Student Panel</h1>
+    <br>
+    <br>
+
+    <h3>Your current course(s):</h3>
+    <br>
+    <table class="table table-hover table-dark">
+      <thead>
+        <tr>
+          <th scope="col">CRN</th>
+          <th scope="col">Title</th>
+          <th scope="col">Year</th>
+          <th scope="col">Term</th>
+          <th scope="col">Instructor</th>
+          <th scope="col">Chatroom</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for c in courses %}
+        <tr>
+          <td>{{ c.CRN }}</td>
+          <td><a href="/dashboard/student/course/{{c.CRN}}">{{ c.title }}</a></td>
+          <td>{{ c.year }}</td>
+          <td>{{ c.term }}</td>
+          <td>{{ c.instructor }}</td>
+          <td><button class="btn btn-warning" onclick="window.open('/chatroom/{{c.CRN}}','_blank')">Enter
+              chatroom</button></td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+
+
+    <br>
+    <button class="btn btn-info" onclick="location.href = '/dashboard/student/add-course';">Add Course</button>
+
+  </div>
 
 </main>
-  
-  
+
+
 {% endblock %}
